--- a/Text to Handwritting/Info.plist
+++ b/Text to Handwritting/Info.plist
@@ -33,8 +33,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Text to Handwritting needs permission to save the generated image to your photo library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Text to Handwritting needs permission to save generated images to your photo library, and allow for custom template creation.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
