Converted templates and relevant views to document-based format

--- a/Text to Handwritting/Info.plist
+++ b/Text to Handwritting/Info.plist
@@ -76,12 +76,32 @@
 			<key>UTTypeIconFiles</key>
 			<array/>
 			<key>UTTypeIdentifier</key>
-			<string>org.davidlong.charset</string>
+			<string>org.davidlong.tthcharset</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>charset</string>
+					<string>tthcharset</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+				<string>public.content</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>A Template</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
+			<key>UTTypeIdentifier</key>
+			<string>org.davidlong.tthtemplate</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>tthtemplate</string>
 				</array>
 			</dict>
 		</dict>
