Changed standard text document format to be .txt

--- a/Text to Handwritting/Info.plist
+++ b/Text to Handwritting/Info.plist
@@ -114,7 +114,7 @@
 				<string>public.plain-text</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>Example Text</string>
+			<string>A text file</string>
 			<key>UTTypeIconFiles</key>
 			<array/>
 			<key>UTTypeIdentifier</key>
@@ -123,7 +123,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>exampletext</string>
+					<string>txt</string>
 				</array>
 			</dict>
 		</dict>
