--- a/.gitignore
+++ b/.gitignore
@@ -101,5 +101,6 @@ iOSInjectionProject/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+**/UserInterfaceState.xcuserstate
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode
