--- a/Text to Handwritting/Info.plist
+++ b/Text to Handwritting/Info.plist
@@ -5,7 +5,32 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
-	<array/>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Character set</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.davidlong.tthcharset</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Template</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.davidlong.tthtemplate</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -63,7 +88,9 @@
 			<key>UTTypeDescription</key>
 			<string>A Charset</string>
 			<key>UTTypeIconFiles</key>
-			<array/>
+			<array>
+				<string>textformat@2x.png</string>
+			</array>
 			<key>UTTypeIdentifier</key>
 			<string>org.davidlong.tthcharset</string>
 			<key>UTTypeTagSpecification</key>
@@ -83,7 +110,9 @@
 			<key>UTTypeDescription</key>
 			<string>A Template</string>
 			<key>UTTypeIconFiles</key>
-			<array/>
+			<array>
+				<string>doc.richtext@2x.png</string>
+			</array>
 			<key>UTTypeIdentifier</key>
 			<string>org.davidlong.tthtemplate</string>
 			<key>UTTypeTagSpecification</key>
@@ -95,7 +124,5 @@
 			</dict>
 		</dict>
 	</array>
-	<key>UTImportedTypeDeclarations</key>
-	<array/>
 </dict>
 </plist>
