--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ iOSInjectionProject/
 # Xcode
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
-
+.DS_store
 
 
 ## Gcc Patch
