modified ImageGenerator to use a dispatchSemaphore to reduce memory usage related to photos saving

--- a/Text to Handwritting.xcodeproj/xcshareddata/xcschemes/Text to Handwritting.xcscheme
+++ b/Text to Handwritting.xcodeproj/xcshareddata/xcschemes/Text to Handwritting.xcscheme
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
