--- a/Text to Handwriting/Info.plist
+++ b/Text to Handwriting/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Text to Handwriting</string>
+	<string>Handwriting</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
