--- a/Text to Handwriting/Info.plist
+++ b/Text to Handwriting/Info.plist
@@ -51,10 +51,12 @@
 	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Text to Handwriting needs permission to save generated images to your photo library, and to allow for custom template creation.</string>
+	<string>Text to Handwriting needs permission to save generated images to your photo library, and allow for custom template creation.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
